added basic posts frontend and made according backend changes

--- a/frontend/user_page.html
+++ b/frontend/user_page.html
@@ -54,7 +54,7 @@
         <!-- Left links -->
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link" href="index.html">Home</a>
+            <a class="nav-link" href="login.html">Home</a>
           </li>
         </ul>
         <!-- Left links -->
@@ -103,29 +103,17 @@
     <!-- Container wrapper -->
   </nav>
   <!-- Navbar -->
-  <div class="card">
-    <img src="https://media.istockphoto.com/photos/mountain-landscape-ponta-delgada-island-azores-picture-id944812540?k=20&m=944812540&s=612x612&w=0&h=U3sC5L6ZJY2oHC33eixu4CcB15JsgKl0Wnhtcpf_p40=" class="card-img-top" alt="Fissure in Sandstone"/>
-    <div class="card-body">
-      <h5 class="card-title">Card 1</h5>
-      <p class="card-text">Lorem ipsum.</p>
-      <a href="#!" class="btn btn-primary">Purchase</a>
-    </div>
+  <div id="posts">
+    
   </div>
-</div>
-<div class="card">
-    <img src="https://images.unsplash.com/photo-1509043759401-136742328bb3?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxleHBsb3JlLWZlZWR8MXx8fGVufDB8fHx8&w=1000&q=80" class="card-img-top" alt="Fissure in Sandstone"/>
-    <div class="card-body">
-      <h5 class="card-title">Card 2</h5>
-      <p class="card-text">Lorem ipsum.</p>
-      <a href="#!" class="btn btn-primary">Purchase</a>
-    </div>
-  </div>
-</div>
+
     <!-- End your project here-->
 
     <!-- MDB -->
     <script type="text/javascript" src="js/mdb.min.js"></script>
     <!-- login js -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
+    <script type="text/javascript" src="js/user_page.js"></script>
   </body>
 </html>
