--- a/frontend/login.html
+++ b/frontend/login.html
@@ -111,6 +111,7 @@
     <script type="text/javascript" src="js/mdb.min.js"></script>
     <!-- login js -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
     <script type="text/javascript" src="js/login.js"></script>
   </body>
 </html>
