add frontend logout

--- a/frontend/user_page.html
+++ b/frontend/user_page.html
@@ -54,7 +54,7 @@
         <!-- Left links -->
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link" href="login.html">Home</a>
+            <a class="nav-link" href="user_page.html">Home</a>
           </li>
         </ul>
         <!-- Left links -->
@@ -93,7 +93,7 @@
               <a class="dropdown-item" href="#">Settings</a>
             </li>
             <li>
-              <a class="dropdown-item" href="#">Logout</a>
+              <a class="dropdown-item" id="logout" href="#">Logout</a>
             </li>
           </ul>
         </div>
@@ -104,7 +104,7 @@
   </nav>
   <!-- Navbar -->
   <div id="posts">
-    
+
   </div>
 
     <!-- End your project here-->
