add user info to user page w/ backend changes

--- a/frontend/user_page.html
+++ b/frontend/user_page.html
@@ -62,41 +62,8 @@
       <!-- Collapsible wrapper -->
   
       <!-- Right elements -->
-      <div class="d-flex align-items-center">
-  
-        <!-- Avatar -->
-        <div class="dropdown">
-          <a
-            class="dropdown-toggle d-flex align-items-center hidden-arrow"
-            href="#"
-            id="navbarDropdownMenuAvatar"
-            role="button"
-            data-mdb-toggle="dropdown"
-            aria-expanded="false"
-          >
-            <img
-              src="https://i.pinimg.com/236x/6e/eb/ec/6eebec182f4d5b235cd7fea6037484d1.jpg"
-              class="rounded-circle"
-              height="25"
-              alt="Black and White Portrait of a Man"
-              loading="lazy"
-            />
-          </a>
-          <ul
-            class="dropdown-menu dropdown-menu-end"
-            aria-labelledby="navbarDropdownMenuAvatar"
-          >
-            <li>
-              <a class="dropdown-item" href="#">My profile</a>
-            </li>
-            <li>
-              <a class="dropdown-item" href="#">Settings</a>
-            </li>
-            <li>
-              <a class="dropdown-item" id="logout" href="#">Logout</a>
-            </li>
-          </ul>
-        </div>
+      <div class="d-flex align-items-center" id="right-navbar">
+
       </div>
       <!-- Right elements -->
     </div>
