--- a/frontend/login.html
+++ b/frontend/login.html
@@ -54,7 +54,10 @@
         <!-- Left links -->
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link" href="index.html">Home</a>
+            <a class="nav-link" href="user_page.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="user_page.html">Add Post</a>
           </li>
         </ul>
         <!-- Left links -->
@@ -112,6 +115,7 @@
     <!-- login js -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
+    <script type="text/javascript" src="js/loadprofile.js"></script>
     <script type="text/javascript" src="js/login.js"></script>
   </body>
 </html>
