--- a/frontend/add_post.html
+++ b/frontend/add_post.html
@@ -45,16 +45,16 @@
     <!-- Navbar brand -->
       <a class="navbar-brand mt-2 mt-lg-0" href="#">
         <img
-          src="https://text2image.com/user_images/202205/text2image_B8635623_20220505_092745.png"
-          height="20"
-          alt="MDB Logo"
+          src="http://localhost:9080/img/bank-card-euro.png"
+          height = "40"
+          alt="Subby Logo"
           loading="lazy"
         />
       </a>
         <!-- Left links -->
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link" href="user_page.html">Home</a>
+            <a class="nav-link" href="feed.html">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="add_post.html">Add Post</a>
