add great user pages and changed localization

--- a/frontend/login.html
+++ b/frontend/login.html
@@ -54,10 +54,18 @@
         <!-- Left links -->
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link" href="feed.html">Home</a>
+            <a class="nav-link" href="feed.html">Домой</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="add_post.html">Add Post</a>
+            <div class="input-group">
+              <div class="form-outline">
+                <input id="search-input" type="search" id="form1" class="form-control" />
+                <label class="form-label" for="form1">Поиск</label>
+              </div>
+              <button id="search-button" type="button" class="btn btn-primary">
+                <i class="fas fa-search"></i>
+              </button>
+            </div>
           </li>
         </ul>
         <!-- Left links -->
@@ -68,7 +76,7 @@
       <div class="d-flex align-items-center">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link" href="#">Login</a>
+              <a class="nav-link" href="#">Войти</a>
             </li>
           </ul>
         <!-- Avatar -->
@@ -83,13 +91,13 @@
     <!-- Username input -->
     <div class="form-outline mb-4">
       <input name="username" type="text"  id="form1Example1" class="form-control" />
-      <label class="form-label" for="form1Example1">Username</label>
+      <label class="form-label" for="form1Example1">Имя пользователя</label>
     </div>
   
     <!-- Password input -->
     <div class="form-outline mb-4">
       <input name="password" type="password" id="form1Example2" class="form-control"  />
-      <label class="form-label" for="form1Example2">Password</label>
+      <label class="form-label" for="form1Example2">Пароль</label>
     </div>
   
     <!-- 2 column grid layout for inline styling -->
@@ -104,7 +112,7 @@
       
   
     <!-- Submit button -->
-    <button type="submit" class="btn btn-primary btn-block" id="btn">Sign in</button>
+    <button type="submit" class="btn btn-primary btn-block" id="btn">Войти</button>
   </form>
   
 </div>
@@ -115,6 +123,8 @@
     <!-- login js -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
+    <script type="text/javascript" src="js/checklogin.js"></script>
     <script type="text/javascript" src="js/login.js"></script>
+    <script type="text/javascript" src="js/search_bar.js"></script>
   </body>
 </html>
