--- a/frontend/add_post.html
+++ b/frontend/add_post.html
@@ -20,6 +20,7 @@
     <!-- MDB -->
     <link rel="stylesheet" href="css/mdb.min.css" />
     <link href="css/add_post.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <!-- Start your project here-->
@@ -53,11 +54,22 @@
       </a>
         <!-- Left links -->
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link" href="feed.html">Home</a>
+          <li class="nav-item" >
+            <a class="nav-link" href="feed.html">Новости</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="add_post.html">Add Post</a>
+            <a class="nav-link only-logged-in" href="add_post.html">Добавить запись</a>
+          </li>
+          <li class="nav-item">
+            <div class="input-group">
+              <div class="form-outline">
+                <input id="search-input" type="search" id="form1" class="form-control" />
+                <label class="form-label" for="form1">Поиск</label>
+              </div>
+              <button id="search-button" type="button" class="btn btn-primary">
+                <i class="fas fa-search"></i>
+              </button>
+            </div>
           </li>
         </ul>
         <!-- Left links -->
@@ -77,32 +89,32 @@
   <form id="upload-form">
   
     <!-- Message input -->
-    <label>Post Body</label>
+    <label>Запись</label>
     <div class="form-outline mb-4">
       
       <textarea name="post_body" class="form-control" id="post_body_input" rows="4"></textarea>
-      <label class="form-label" for="form6Example7">What's new?</label>
+      <label class="form-label" for="form6Example7">Что нового?</label>
     </div>
 
     <div id="image-preview">
-      <label class="form-label" id="preview-label" hidden="hidden">Image Preview</label>
+      <label class="form-label" id="preview-label" hidden="hidden">Предварительный просмотр изображения</label>
       <img id="preview">
     </div>
 
     <div id="img-submit">
-      <label class="form-label" for="customFile">Add Image</label>
+      <label class="form-label" for="customFile">Добавить изображение</label>
       <input type="file" class="form-control" name="img"  />
     </div>
 
 
   
     <!-- Submit button -->
-    <button type="submit" class="btn btn-primary btn-block mb-4" id="btnSubmit" disabled="disabled">Add Post</button>
+    <button type="submit" class="btn btn-primary btn-block mb-4" id="btnSubmit" disabled="disabled">Добавить запись</button>
     <div class="alert alert-success" role="alert" id="submit-success" display="none">
-      Post submitted successfully!
+      Запись успешно добавлена!
     </div>
     <div class="alert alert-danger" role="alert" id="submit-error" display="none">
-      Post submitted successfully!
+      Ошибка при добавлении записи!
     </div>
   </form>
   
@@ -116,7 +128,9 @@
     <!-- login js -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
+    <script type="text/javascript" src="js/checklogin.js"></script>
     <script type="text/javascript" src="js/loadprofile.js"></script>
     <script type="text/javascript" src="js/add_post.js"></script>
+    <script type="text/javascript" src="js/search_bar.js"></script>
   </body>
 </html>
