--- a/frontend/user_profile.html
+++ b/frontend/user_profile.html
@@ -55,10 +55,21 @@
         <!-- Left links -->
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link" href="feed.html">Home</a>
+            <a class="nav-link" href="feed.html">Новости</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="add_post.html">Add Post</a>
+            <a class="nav-link only-logged-in" href="add_post.html">Добавить запись</a>
+          </li>
+          <li class="nav-item">
+            <div class="input-group">
+              <div class="form-outline">
+                <input id="search-input" type="search" id="form1" class="form-control" />
+                <label class="form-label" for="form1">Поиск</label>
+              </div>
+              <button id="search-button" type="button" class="btn btn-primary">
+                <i class="fas fa-search"></i>
+              </button>
+            </div>
           </li>
         </ul>
         <!-- Left links -->
@@ -77,6 +88,9 @@
   <div id="userInfo">
 
   </div>
+  <div id="posts">
+
+  </div>
 
     <!-- End your project here-->
 
@@ -85,7 +99,9 @@
     <!-- login js -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
+    <script type="text/javascript" src="js/checklogin.js"></script>
     <script type="text/javascript" src="js/loadprofile.js"></script>
     <script type="text/javascript" src="js/user_profile.js"></script>
+    <script type="text/javascript" src="js/search_bar.js"></script>
   </body>
 </html>
