basic membership added to frontend

--- a/frontend/feed.html
+++ b/frontend/feed.html
@@ -84,8 +84,16 @@
     <!-- Container wrapper -->
   </nav>
   <!-- Navbar -->
-  <div id="posts">
-
+  <div id="container">
+    <div class="col">
+      <br>
+    </div>
+    <div id="posts" class="col">
+      <br>
+    </div>
+    <div class="col">
+      <br>
+    </div>
   </div>
 
     <!-- End your project here-->
