--- a/frontend/user_profile.html
+++ b/frontend/user_profile.html
@@ -88,9 +88,25 @@
   <div id="userInfo">
 
   </div>
-  <div id="posts">
-
+  <div id="content">
+  <div id="container">
+    <div class="col">
+      <br>
+    </div>
+    <div id="posts" class="col">
+      <br>
+    </div>
+    <div  class="col ">
+      <br>
+      <div id="membership-info" class="card">
+        <div class="card-header" id="membership-tiers">Уровни платной подписки</div>
+        <ul class="list-group list-group-light">
+        </ul>
+      </div>
+    </div>
   </div>
+  </div>
+
 
     <!-- End your project here-->
 
