--- a/frontend/user_profile.html
+++ b/frontend/user_profile.html
@@ -61,6 +61,9 @@
             <a class="nav-link only-logged-in" href="add_post.html">Добавить запись</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link only-logged-in" href="manage_membership.html">Управление подпиской</a>
+          </li>
+          <li class="nav-item">
             <div class="input-group">
               <div class="form-outline">
                 <input id="search-input" type="search" id="form1" class="form-control" />
