--- a/frontend/add_post.html
+++ b/frontend/add_post.html
@@ -73,6 +73,9 @@
               >
             </li>
             <li class="nav-item">
+              <a class="nav-link only-logged-in" href="add_shopitem.html">Добавить товар</a>
+            </li> 
+            <li class="nav-item">
               <div class="input-group">
                 <div class="form-outline">
                   <input
