--- a/frontend/feed.html
+++ b/frontend/feed.html
@@ -63,6 +63,9 @@
             <a class="nav-link only-logged-in" href="manage_membership.html">Управление подпиской</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link only-logged-in" href="add_shopitem.html">Добавить товар</a>
+          </li> 
+          <li class="nav-item">
             <div class="input-group">
               <div class="form-outline">
                 <input id="search-input" type="search" id="form1" class="form-control" />
