basic grid user shop frontend done

--- a/frontend/user_shop.html
+++ b/frontend/user_shop.html
@@ -19,8 +19,7 @@
     />
     <!-- MDB -->
     <link rel="stylesheet" href="css/mdb.min.css" />
-    <link href="css/style.css" rel="stylesheet">
-    <link href="css/user_profile.css" rel="stylesheet">
+    <link href="css/user_shop.css" rel="stylesheet">
   </head>
   <body>
     <!-- Start your project here-->
@@ -91,28 +90,9 @@
     <!-- Container wrapper -->
   </nav>
   <!-- Navbar -->
-  <div id="userInfo">
+  <div id="shop-content" class = "container">
 
   </div>
-  <div id="content">
-  <div id="container">
-    <div class="col">
-      <br>
-    </div>
-    <div id="posts" class="col">
-      <br>
-    </div>
-    <div  class="col ">
-      <br>
-      <div id="membership-info" class="card">
-        <ul class="list-group list-group-light">
-        </ul>
-      </div>
-    </div>
-  </div>
-  </div>
-
-
     <!-- End your project here-->
 
     <!-- MDB -->
@@ -122,7 +102,7 @@
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
     <script type="text/javascript" src="js/checklogin.js"></script>
     <script type="text/javascript" src="js/loadprofile.js"></script>
-    <script type="text/javascript" src="js/user_profile.js"></script>
+    <script type="text/javascript" src="js/user_shop.js"></script>
     <script type="text/javascript" src="js/search_bar.js"></script>
   </body>
 </html>
