add shop showcase to profile

--- a/frontend/user_profile.html
+++ b/frontend/user_profile.html
@@ -98,6 +98,10 @@
   <div id="container">
     <div class="col">
       <br>
+      <div id="shop-info" class = "card">
+
+      </div>
+
     </div>
     <div id="posts" class="col">
       <br>
