add posts deletion to frontend

--- a/frontend/add_shopitem.html
+++ b/frontend/add_shopitem.html
@@ -129,7 +129,7 @@
 
   
     <!-- Submit button -->
-    <button type="submit" class="btn btn-primary btn-block mb-4" id="btnSubmitItem" disabled="disabled">Добавить уровень</button>
+    <button type="submit" class="btn btn-primary btn-block mb-4" id="btnSubmitItem" disabled="disabled">Добавить товар</button>
     <div class="alert alert-success" role="alert" id="submit-success" display="none">
       Товар успешно добавлен!
     </div>
