add tier and shop item deletion

--- a/frontend/add_post.html
+++ b/frontend/add_post.html
@@ -110,7 +110,7 @@
     <div class="form" name="add-post-form">
       <form id="upload-form">
         <!-- Message input -->
-        <label>Запись</label>
+        <h5 id="body-label">Добавление записи</h5>
         <div class="form-outline mb-4">
           <textarea
             name="post_body"
@@ -118,7 +118,7 @@
             id="post_body_input"
             rows="4"
           ></textarea>
-          <label class="form-label" for="form6Example7">Что нового?</label>
+          <label class="form-label" for="form6Example7">Запись</label>
         </div>
 
         <div id="image-preview">
