--- a/frontend/add_shopitem.html
+++ b/frontend/add_shopitem.html
@@ -98,6 +98,7 @@
 <input type="password" style="display:none">
   <form id="upload-form">
 
+    <h5 id="body-label">Добавление товара</h5>
     <div class="form-outline mb-4">
       <input type="text" name="name" id="item-name" class="form-control" />
       <label class="form-label" for="item-name">Название товара</label>
