--- a/frontend/manage_membership.html
+++ b/frontend/manage_membership.html
@@ -98,6 +98,7 @@
 <input type="password" style="display:none">
   <form id="upload-form">
 
+    <h5 id="body-label">Добавление уровня подписки</h5>
     <div class="form-outline mb-4">
       <input type="text" name="name" id="tier-name" class="form-control" />
       <label class="form-label" for="tier-name">Название уровня</label>
